add partial view with customers details to customer view

--- a/CustomersAjax/Views/Customer/Customer.cshtml
+++ b/CustomersAjax/Views/Customer/Customer.cshtml
@@ -20,9 +20,15 @@
 
             foreach (var customer in Model.Item1)
             {
-                if(Model.Item1.IndexOf(customer) == 0)
+                if (Model.Item1.IndexOf(customer) == 0)
                 {
+                    @Model.Item1.IndexOf(customer)
                     selected = true;
+                }
+                else
+                {
+                    @Model.Item1.IndexOf(customer)
+                    selected = false;
                 }
                 //returns radio button input element for each property taht is represented by a specific expression - CustomerNumber
                 <div>
@@ -33,5 +39,9 @@
             <input type="button" id="submitButton" value="Display Details" />
         }
     </div>
+    @*add partial view and pass customer from tuple*@
+<div>
+    @Html.Partial("~/Views/Shared/_CustomerDetails.cshtml", Model.Item2)
+</div>
 </body>
 </html>
