--- a/CustomersAjax/Views/Customer/Customer.cshtml
+++ b/CustomersAjax/Views/Customer/Customer.cshtml
@@ -20,9 +20,10 @@
 
             foreach (var customer in Model.Item1)
             {
-                if (Model.Item1.IndexOf(customer) == 0)
+                //if customers[2] from controller == current customer
+                if (Model.Item2 == customer)
                 {
-                    @Model.Item1.IndexOf(customer)
+                    @Model.Item2.Name
                     selected = true;
                 }
                 else
