--- a/CustomersAjax/Views/Shared/_Layout.cshtml
+++ b/CustomersAjax/Views/Shared/_Layout.cshtml
@@ -11,6 +11,7 @@
     <title>@Page.Name</title>
     <link href="~/Content/bootstrap.min.css" rel="stylesheet" />
     <script src="~/Scripts/jquery-3.4.1.min.js"></script>
+    <script src="~/Scripts/jquery.validate.min.js"></script>
     <script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>
 </head>
 <body>
