--- a/CustomersAjax/Views/Shared/_Layout.cshtml
+++ b/CustomersAjax/Views/Shared/_Layout.cshtml
@@ -13,6 +13,7 @@
     <script src="~/Scripts/jquery-3.4.1.min.js"></script>
     <script src="~/Scripts/jquery.validate.min.js"></script>
     <script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>
+    <script src="~/Scripts/jquery.unobtrusive-ajax.min.js"></script>
 </head>
 <body>
     <div class="container container-fluid">
