--- a/CustomersAjax/Views/Customer/CustomerNoAjax.cshtml
+++ b/CustomersAjax/Views/Customer/CustomerNoAjax.cshtml
@@ -2,15 +2,9 @@
 @model Tuple<List<Customer>, Customer>
 @{
     Layout = "~/Views/Shared/_Layout.cshtml";
-    AjaxOptions ajaxOptions = new AjaxOptions
-    {
-        HttpMethod = "POST",
-        InsertionMode = InsertionMode.Replace,
-        UpdateTargetId = "customerInfo"
-    };
 }
 
-@using (Ajax.BeginForm("OnSelectCustomer", "Customer", ajaxOptions))
+@using (Html.BeginForm("OnSelectCustomer", "Customer"))
 {
     @Html.AntiForgeryToken();
     //var selected = false;
